[FEAT] added jumbo and portfolio section

--- a/index.html
+++ b/index.html
@@ -8,13 +8,55 @@
     <title>Bootstrap Freelancer</title>
 </head>
 <body>
-    <div class="container-fluid bg-primary gx-0">
-        <div class="row">
-            <div class="col-6 gx-0 text-end">
-                <div class="content"></div>
+    <!-- HEADER -->
+    <header>
+        <div class="container-fluid bg-primary gx-0">
+            <div class="row">
+                <div class="col-6 gx-0 text-end">
+                    <div class="header"></div>
+                </div>
+                <div class="col-6 gx-0 text-end ">
+                    <div class="header"></div>
+                </div>
             </div>
-            <div class="col-6 gx-0 text-end ">
-                <div class="content"></div>
+        </div>
+    </header>
+    <!-- JUMBO-SECTION -->
+    <div class="container-fluid pt-3 bg-body-secondary gx-0">
+        <div class="row">
+            <div class="col-12 d-flex justify-content-center">
+                <div class="jumbo">
+                    <div class="img m-auto"></div>
+                    <div class="text"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- PORTFOLIO SECTION -->
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-12 d-flex justify-content-center">
+                <div class="text"></div>
+            </div>
+        </div>
+        <div class="row gy-2 mt-1">
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card"></div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card"></div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card"></div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card"></div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card"></div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card"></div>
             </div>
         </div>
     </div>
