[FEAT] added about section and fixed an overflow on x axis

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- HEADER -->
     <header>
-        <div class="container-fluid bg-primary gx-0">
+        <div class="container-fluid bg-primary">
             <div class="row">
                 <div class="col-6 gx-0 text-end">
                     <div class="header"></div>
@@ -22,21 +22,18 @@
         </div>
     </header>
     <!-- JUMBO-SECTION -->
-    <div class="container-fluid pt-3 bg-body-secondary gx-0">
+    <div class="container-fluid p-4 bg-secondary">
         <div class="row">
-            <div class="col-12 d-flex justify-content-center">
-                <div class="jumbo">
-                    <div class="img m-auto"></div>
-                    <div class="text"></div>
-                </div>
+            <div class="col-12">
+                <div class="content"></div>
             </div>
         </div>
     </div>
     <!-- PORTFOLIO SECTION -->
-    <div class="container mt-4">
+    <div class="container mt-4 mb-4">
         <div class="row">
-            <div class="col-12 d-flex justify-content-center">
-                <div class="text"></div>
+            <div class="col-12">
+                <div class="content"></div>
             </div>
         </div>
         <div class="row gy-2 mt-1">
@@ -60,5 +57,34 @@
             </div>
         </div>
     </div>
+    <!-- ABOUT SECTION -->
+     <div class="container-fluid p-4 bg-body-secondary ">
+        <div class="row mb-2">
+            <div class="col-12">
+                <div class="content"></div>
+            </div>
+        </div>
+        <div class="row gy-2 mb-2">
+            <div class="col-12 col-md-6">
+                <div class="content"></div>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="content"></div>
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-12">
+                <div class="content"></div>
+            </div>
+        </div>
+     </div>
+     <!-- FORM SECTION -->
+      <div class="container p-5">
+        <div class="row">
+            <div class="col-12">
+                <div class="content"></div>
+            </div>
+        </div>
+      </div>
 </body>
 </html>
