[UPD] added correct color to sections background

--- a/index.html
+++ b/index.html
@@ -8,83 +8,115 @@
     <title>Bootstrap Freelancer</title>
 </head>
 <body>
-    <!-- HEADER -->
+<!-- HEADER -->
     <header>
-        <div class="container-fluid bg-primary">
+        <div class="container-fluid bg-header p-1">
             <div class="row">
-                <div class="col-6 gx-0 text-end">
+                <div class="col-6">
                     <div class="header"></div>
                 </div>
-                <div class="col-6 gx-0 text-end ">
+                <div class="col-6 ">
                     <div class="header"></div>
                 </div>
             </div>
         </div>
     </header>
-    <!-- JUMBO-SECTION -->
-    <div class="container-fluid p-4 bg-secondary">
-        <div class="row">
-            <div class="col-12">
-                <div class="content"></div>
+<!-- MAIN -->
+    <main>
+        <!-- JUMBO-SECTION -->
+        <div class="container-fluid p-4 bg-acqua">
+            <div class="row">
+                <div class="col-12">
+                    <div class="content"></div>
+                </div>
             </div>
         </div>
-    </div>
-    <!-- PORTFOLIO SECTION -->
-    <div class="container mt-4 mb-4">
-        <div class="row">
-            <div class="col-12">
-                <div class="content"></div>
+        <!-- PORTFOLIO SECTION -->
+        <div class="container mt-4 mb-4">
+            <div class="row">
+                <div class="col-12">
+                    <div class="content"></div>
+                </div>
+            </div>
+            <div class="row gy-2 mt-1">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card"></div>
+                </div>
             </div>
         </div>
-        <div class="row gy-2 mt-1">
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="card"></div>
+        <!-- ABOUT SECTION -->
+         <div class="container-fluid p-4 bg-acqua ">
+            <div class="row mb-2">
+                <div class="col-12">
+                    <div class="content"></div>
+                </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="card"></div>
+            <div class="row gy-2 mb-2">
+                <div class="col-12 col-md-6">
+                    <div class="content"></div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="content"></div>
+                </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="card"></div>
+            <div class="row ">
+                <div class="col-12">
+                    <div class="content"></div>
+                </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="card"></div>
+         </div>
+         <!-- FORM SECTION -->
+        <div class="container p-5">
+            <div class="row mb-3">
+                <div class="col-12">
+                    <div class="content"></div>
+                </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="card"></div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="card"></div>
-            </div>
-        </div>
-    </div>
-    <!-- ABOUT SECTION -->
-     <div class="container-fluid p-4 bg-body-secondary ">
-        <div class="row mb-2">
-            <div class="col-12">
-                <div class="content"></div>
-            </div>
-        </div>
-        <div class="row gy-2 mb-2">
-            <div class="col-12 col-md-6">
-                <div class="content"></div>
-            </div>
-            <div class="col-12 col-md-6">
-                <div class="content"></div>
-            </div>
-        </div>
-        <div class="row ">
-            <div class="col-12">
-                <div class="content"></div>
+            <!-- dubbioso di questo passaggio -->
+            <div class="row">
+                <div class="col-12">
+                    <div class="content"></div>
+                </div>
             </div>
         </div>
-     </div>
-     <!-- FORM SECTION -->
-      <div class="container p-5">
-        <div class="row">
-            <div class="col-12">
-                <div class="content"></div>
+    </main>
+<!-- FOOTER -->
+    <footer>
+        <div class="container-fluid bg-footer p-3">
+            <div class="row gy-1">
+                <div class="col-12 col-md-4">
+                    <div class="content"></div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="content"></div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="content"></div>
+                </div>
             </div>
         </div>
-      </div>
+        <div class="conteiner-fluid bg-header p-3">
+            <div class="row">
+                <div class="col-12">
+                    <div class="content"></div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
