--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                         <nav class="navbar navbar-expand-lg navbar-light text-white">
                             <div class="container-fluid">
                               <a class="navbar-brand text-white" href="#">START BOOTSTRAP</a>
-                              <button class="navbar-toggler d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <i class="fa-solid fa-bars text-header-icon"></i>
                               </button>
-                              <div class="collapse navbar-collapse" id="navbarSupportedContent ">
-                                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-md-flex">
+                              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                                   <li class="nav-item">
                                     <a class="nav-link text-white" aria-current="page" href="#">PORTFOLIO</a>
                                   </li>
@@ -45,13 +45,21 @@
 <!-- MAIN -->
     <main>
         <!-- JUMBO-SECTION -->
-        <div class="container-fluid p-4 bg-acqua">
-            <div class="row">
-                <div class="col-12">
-                    <div class="content"></div>
-                </div>
-            </div>
-        </div>
+         <div id="jumbo" class="bg-acqua">
+             <div class="container py-4">
+                 <div class="row">
+                     <div class="col-12 d-flex flex-column">
+                        <img src="./img/avatar.svg" class="w-50 m-auto jumbo-img" alt="">
+                        <h2 class="d-block text-white mx-auto mt-2 fs-1 fw-semibold">START BOOTSTRAP</h2>
+                        <div class="decoration-custom">
+                            <div class="decoration-custom-line"></div>
+                            <div class="decoration-icon"><i class="bi bi-star-fill"></i></div>
+                            <div class="decoration-custom-line"></div>
+                        </div>
+                     </div>
+                 </div>
+             </div>
+         </div>
         <!-- PORTFOLIO SECTION -->
         <div class="container mt-4 mb-4">
             <div class="row">
