[UPD] created card section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <!-- HEADER -->
     <header>
-        <div class="bg-header">
+        <div class="bg-custom-darkblue">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -52,39 +52,57 @@
                         <img src="./img/avatar.svg" class="w-50 m-auto jumbo-img" alt="">
                         <h2 class="d-block text-white mx-auto mt-2 fs-1 fw-semibold">START BOOTSTRAP</h2>
                         <div class="decoration-custom">
-                            <div class="decoration-custom-line"></div>
-                            <div class="decoration-icon"><i class="bi bi-star-fill"></i></div>
-                            <div class="decoration-custom-line"></div>
+                            <div class="decoration-custom-line bg-white"></div>
+                            <div class="decoration-icon text-white"><i class="bi bi-star-fill"></i></div>
+                            <div class="decoration-custom-line bg-white"></div>
                         </div>
+                        <h4 class="d-block text-white mx-auto mb-3 fs-6">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h4>
                      </div>
                  </div>
              </div>
          </div>
         <!-- PORTFOLIO SECTION -->
-        <div class="container mt-4 mb-4">
+        <div class="container mt-5 mb-5">
             <div class="row">
                 <div class="col-12">
-                    <div class="content"></div>
+                    <h3 class="text-center fs-2">PORTFOLIO</h3>
+                         <div class="decoration-custom">
+                             <div class="decoration-custom-line bg-custom-darkblue"></div>
+                             <div class="decoration-icon text-custom-darkblue"><i class="bi bi-star-fill"></i></div>
+                             <div class="decoration-custom-line bg-custom-darkblue"></div>
+                         </div>
                 </div>
             </div>
             <div class="row gy-2 mt-1">
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card"></div>
+                <div class="col-12 col-md-6 col-lg-4 g-3">
+                    <div class="rounded-3">
+                        <img src="./img/cabin.png" class="w-100 object-fit-cover rounded-3" alt="cabin">
+                    </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card"></div>
+                <div class="col-12 col-md-6 col-lg-4 g-3">
+                    <div class="rounded-3">
+                        <img src="./img/cake.png" class="w-100 object-fit-cover rounded-3" alt="cabin">
+                    </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card"></div>
+                <div class="col-12 col-md-6 col-lg-4 g-3">
+                    <div class="rounded-3">
+                        <img src="./img/circus.png" class="w-100 object-fit-cover rounded-3" alt="cabin">
+                    </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card"></div>
+                <div class="col-12 col-md-6 col-lg-4 g-3">
+                    <div class="rounded-3">
+                        <img src="./img/game.png" class="w-100 object-fit-cover rounded-3" alt="cabin">
+                    </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card"></div>
+                <div class="col-12 col-md-6 col-lg-4 g-3">
+                    <div class="rounded-3">
+                        <img src="./img/safe.png" class="w-100 object-fit-cover rounded-3" alt="cabin">
+                    </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card"></div>
+                <div class="col-12 col-md-6 col-lg-4 g-3">
+                    <div class="rounded-3">
+                        <img src="./img/submarine.png" class="w-100 object-fit-cover rounded-3" alt="cabin">
+                    </div>
                 </div>
             </div>
         </div>
@@ -139,7 +157,7 @@
                 </div>
             </div>
         </div>
-        <div class="conteiner-fluid bg-header p-3">
+        <div class="conteiner-fluid bg-custom-darkblue p-3">
             <div class="row">
                 <div class="col-12">
                     <div class="content"></div>
