--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                                   <li class="nav-item">
-                                    <a class="nav-link text-white" aria-current="page" href="#">PORTFOLIO</a>
+                                    <a class="nav-link text-white" aria-current="page" href="#portfolio">PORTFOLIO</a>
                                   </li>
                                   <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">ABOUT</a>
+                                    <a class="nav-link text-white" href="#about">ABOUT</a>
                                   </li>
                                   <li class="nav-item">
-                                    <a class="nav-link text-white" href="#" tabindex="-1" aria-disabled="true">CONTACT</a>
+                                    <a class="nav-link text-white" href="#contact" tabindex="-1" aria-disabled="true">CONTACT</a>
                                   </li>
                                 </ul>
                               </div>
@@ -62,70 +62,81 @@
              </div>
          </div>
         <!-- PORTFOLIO SECTION -->
-        <div class="container mt-5 mb-5">
-            <div class="row">
-                <div class="col-12">
-                    <h3 class="text-center fs-2">PORTFOLIO</h3>
-                         <div class="decoration-custom">
-                             <div class="decoration-custom-line bg-custom-darkblue"></div>
-                             <div class="decoration-icon text-custom-darkblue"><i class="bi bi-star-fill"></i></div>
-                             <div class="decoration-custom-line bg-custom-darkblue"></div>
+         <div id="portfolio">
+             <div class="container mt-5 mb-5">
+                 <div class="row">
+                     <div class="col-12">
+                         <h3 class="text-center fs-2">PORTFOLIO</h3>
+                              <div class="decoration-custom">
+                                  <div class="decoration-custom-line bg-custom-darkblue"></div>
+                                  <div class="decoration-icon text-custom-darkblue"><i class="bi bi-star-fill"></i></div>
+                                  <div class="decoration-custom-line bg-custom-darkblue"></div>
+                              </div>
+                     </div>
+                 </div>
+                 <div class="row gy-2 mt-1">
+                     <div class="col-12 col-md-6 col-lg-4 g-3">
+                         <div class="rounded-3">
+                             <img src="./img/cabin.png" class="w-100 object-fit-cover rounded-3" alt="cabin">
                          </div>
-                </div>
-            </div>
-            <div class="row gy-2 mt-1">
-                <div class="col-12 col-md-6 col-lg-4 g-3">
-                    <div class="rounded-3">
-                        <img src="./img/cabin.png" class="w-100 object-fit-cover rounded-3" alt="cabin">
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 g-3">
-                    <div class="rounded-3">
-                        <img src="./img/cake.png" class="w-100 object-fit-cover rounded-3" alt="cabin">
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 g-3">
-                    <div class="rounded-3">
-                        <img src="./img/circus.png" class="w-100 object-fit-cover rounded-3" alt="cabin">
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 g-3">
-                    <div class="rounded-3">
-                        <img src="./img/game.png" class="w-100 object-fit-cover rounded-3" alt="cabin">
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 g-3">
-                    <div class="rounded-3">
-                        <img src="./img/safe.png" class="w-100 object-fit-cover rounded-3" alt="cabin">
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 g-3">
-                    <div class="rounded-3">
-                        <img src="./img/submarine.png" class="w-100 object-fit-cover rounded-3" alt="cabin">
-                    </div>
-                </div>
-            </div>
-        </div>
+                     </div>
+                     <div class="col-12 col-md-6 col-lg-4 g-3">
+                         <div class="rounded-3">
+                             <img src="./img/cake.png" class="w-100 object-fit-cover rounded-3" alt="cake">
+                         </div>
+                     </div>
+                     <div class="col-12 col-md-6 col-lg-4 g-3">
+                         <div class="rounded-3">
+                             <img src="./img/circus.png" class="w-100 object-fit-cover rounded-3" alt="circus">
+                         </div>
+                     </div>
+                     <div class="col-12 col-md-6 col-lg-4 g-3">
+                         <div class="rounded-3">
+                             <img src="./img/game.png" class="w-100 object-fit-cover rounded-3" alt="game">
+                         </div>
+                     </div>
+                     <div class="col-12 col-md-6 col-lg-4 g-3">
+                         <div class="rounded-3">
+                             <img src="./img/safe.png" class="w-100 object-fit-cover rounded-3" alt="safe">
+                         </div>
+                     </div>
+                     <div class="col-12 col-md-6 col-lg-4 g-3">
+                         <div class="rounded-3">
+                             <img src="./img/submarine.png" class="w-100 object-fit-cover rounded-3" alt="submarine">
+                         </div>
+                     </div>
+                 </div>
+             </div>
+         </div>
         <!-- ABOUT SECTION -->
-         <div class="container-fluid p-4 bg-acqua ">
-            <div class="row mb-2">
-                <div class="col-12">
-                    <div class="content"></div>
+         <div id="about" class="bg-acqua">
+             <div class="container p-4">
+                <div class="row mb-2">
+                    <div class="col-12">
+                        <h3 class="text-center fs-2 text-white mb-0 mt-2">ABOUT</h3>
+                        <div class="decoration-custom">
+                            <div class="decoration-custom-line bg-white"></div>
+                            <div class="decoration-icon text-white"><i class="bi bi-star-fill"></i></div>
+                            <div class="decoration-custom-line bg-white"></div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="row gy-2 mb-2">
-                <div class="col-12 col-md-6">
-                    <div class="content"></div>
+                <div class="row gy-2 mb-2">
+                    <div class="col-12 col-md-6">
+                        <p class="text-white fs-6 ms-5 me-5 me-md-0">Freelancer is a free bootstrap theme created by Start Bootstrap.
+                                The download includes the complete source files including
+                                HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <p class="text-white fs-6 ms-5 ms-md-0 me-5">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <div class="content"></div>
+                <div class="row ">
+                    <div class="col-12 d-flex justify-content-center">
+                        <button class="btn btn-link border border-white rounded text-white text-decoration-none"><i class="fa-solid fa-download"></i> Download</button>
+                    </div>
                 </div>
-            </div>
-            <div class="row ">
-                <div class="col-12">
-                    <div class="content"></div>
-                </div>
-            </div>
+             </div>
          </div>
          <!-- FORM SECTION -->
         <div class="container p-5">
