[UPD] added form section

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
          </div>
         <!-- ABOUT SECTION -->
          <div id="about" class="bg-acqua">
-             <div class="container p-4">
+             <div class="container pt-5 pb-4">
                 <div class="row mb-2">
                     <div class="col-12">
                         <h3 class="text-center fs-2 text-white mb-0 mt-2">ABOUT</h3>
@@ -142,13 +142,35 @@
         <div class="container p-5">
             <div class="row mb-3">
                 <div class="col-12">
-                    <div class="content"></div>
+                    <h3 class="text-center fs-2">CONTACT ME</h3>
+                    <div class="decoration-custom">
+                        <div class="decoration-custom-line bg-custom-darkblue"></div>
+                        <div class="decoration-icon text-custom-darkblue"><i class="bi bi-star-fill"></i></div>
+                        <div class="decoration-custom-line bg-custom-darkblue"></div>
+                    </div>
                 </div>
             </div>
-            <!-- dubbioso di questo passaggio -->
             <div class="row">
                 <div class="col-12">
-                    <div class="content"></div>
+                    <form>
+                        <div class="form-group">
+                            <label class="" for="name">Name</label>
+                            <input type="text" class="underline-input border-0 border-bottom mb-3" id="name" placeholder="">
+                        </div>
+                        <div class="form-group">
+                            <label class="" for="email" >Email</label>
+                            <input type="email" class="underline-input border-0 border-bottom mb-3" id="email" placeholder="">
+                        </div>
+                        <div class="form-group">
+                            <label class="" for="phone">Phone Number</label>
+                            <input type="tel" class="underline-input border-0 border-bottom mb-3" id="phone" placeholder="">
+                        </div>
+                        <div class="form-group">
+                            <label class="" for="message">Messaggio</label>
+                            <textarea class="underline-input border-0 border-bottom mb-3" id="message" rows="5" placeholder=""></textarea>
+                        </div>
+                        <button type="submit" class="btn text-white bg-acqua mt-3">Send</button>
+                    </form>
                 </div>
             </div>
         </div>
