--- a/index.html
+++ b/index.html
@@ -139,61 +139,80 @@
              </div>
          </div>
          <!-- FORM SECTION -->
-        <div class="container p-5">
-            <div class="row mb-3">
-                <div class="col-12">
-                    <h3 class="text-center fs-2">CONTACT ME</h3>
-                    <div class="decoration-custom">
-                        <div class="decoration-custom-line bg-custom-darkblue"></div>
-                        <div class="decoration-icon text-custom-darkblue"><i class="bi bi-star-fill"></i></div>
-                        <div class="decoration-custom-line bg-custom-darkblue"></div>
+        <div id="contact">
+            <div class="container p-5">
+                <div class="row mb-3">
+                    <div class="col-12">
+                        <h3 class="text-center fs-2">CONTACT ME</h3>
+                        <div class="decoration-custom">
+                            <div class="decoration-custom-line bg-custom-darkblue"></div>
+                            <div class="decoration-icon text-custom-darkblue"><i class="bi bi-star-fill"></i></div>
+                            <div class="decoration-custom-line bg-custom-darkblue"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <form>
-                        <div class="form-group">
-                            <label class="" for="name">Name</label>
-                            <input type="text" class="underline-input border-0 border-bottom mb-3" id="name" placeholder="">
-                        </div>
-                        <div class="form-group">
-                            <label class="" for="email" >Email</label>
-                            <input type="email" class="underline-input border-0 border-bottom mb-3" id="email" placeholder="">
-                        </div>
-                        <div class="form-group">
-                            <label class="" for="phone">Phone Number</label>
-                            <input type="tel" class="underline-input border-0 border-bottom mb-3" id="phone" placeholder="">
-                        </div>
-                        <div class="form-group">
-                            <label class="" for="message">Messaggio</label>
-                            <textarea class="underline-input border-0 border-bottom mb-3" id="message" rows="5" placeholder=""></textarea>
-                        </div>
-                        <button type="submit" class="btn text-white bg-acqua mt-3">Send</button>
-                    </form>
+                <div class="row">
+                    <div class="col-12">
+                        <form>
+                            <div class="form-group">
+                                <label class="" for="name">Name</label>
+                                <input type="text" class="underline-input border-0 border-bottom mb-3" id="name" placeholder="">
+                            </div>
+                            <div class="form-group">
+                                <label class="" for="email" >Email</label>
+                                <input type="email" class="underline-input border-0 border-bottom mb-3" id="email" placeholder="">
+                            </div>
+                            <div class="form-group">
+                                <label class="" for="phone">Phone Number</label>
+                                <input type="tel" class="underline-input border-0 border-bottom mb-3" id="phone" placeholder="">
+                            </div>
+                            <div class="form-group">
+                                <label class="" for="message">Messaggio</label>
+                                <textarea class="underline-input border-0 border-bottom mb-3" id="message" rows="5" placeholder=""></textarea>
+                            </div>
+                            <button type="submit" class="btn text-white bg-acqua mt-3">Send</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
 <!-- FOOTER -->
-    <footer>
-        <div class="container-fluid bg-footer p-3">
-            <div class="row gy-1">
-                <div class="col-12 col-md-4">
-                    <div class="content"></div>
+    <footer class="bg-custom-lighblue">
+        <div class="container-fluid py-5">
+            <div class="row gy-5">
+                <div class="col-12 col-md-4 mb-3">
+                    <h5 class="text-white text-center">LOCATION</h5>
+                    <h5 class="text-white text-center">2215 John Daniel Drive Clark, MO 54243</h5>
                 </div>
                 <div class="col-12 col-md-4">
-                    <div class="content"></div>
+                    <h5 class="text-white text-center mt-5 mt-sm-2">AROUND THE WEB</h5>
+                    <div class="text-center text-white fs-5 d-flex justify-content-center">
+                        <a href="" class="text-decoration-none text-white circle-icon-footer me-3">
+                            <i class="p-3 fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a href="" class="text-decoration-none text-white circle-icon-footer me-3">
+                            <i class="p-3 fa-brands fa-google-plus-g"></i>
+                        </a>
+                        <a href="" class="text-decoration-none text-white circle-icon-footer me-3">
+                            <i class="p-3 fa-brands fa-twitter"></i>
+                        </a>
+                        <a href="" class="text-decoration-none text-white circle-icon-footer me-3">
+                            <i class="p-3 fa-brands fa-linkedin-in"></i>
+                        </a>
+                        <div class="d-flex justify-content-center align-items-center bg-primary rounded-circle"></div>
+                    </div>
                 </div>
                 <div class="col-12 col-md-4">
-                    <div class="content"></div>
+                    <h5 class="text-white text-center mt-5 mt-sm-2">ABOUT FREELANCER</h5>
+                    <h5 class="text-white text-center mt-5 mt-sm-2">Freelance is a free to use, open source Bootstrap theme created by <span class="text-acqua">Start Bootstrap</span>.</h5>
                 </div>
             </div>
         </div>
         <div class="conteiner-fluid bg-custom-darkblue p-3">
             <div class="row">
                 <div class="col-12">
-                    <div class="content"></div>
+                    <p class="text-white text-center fs-6 mt-5 mt-sm-2">Copyright &#169; Your Website 2019</p>
                 </div>
             </div>
         </div>
