[FEAT] added hover effects to the clickable things

--- a/index.html
+++ b/index.html
@@ -74,34 +74,34 @@
                               </div>
                      </div>
                  </div>
-                 <div class="row gy-2 mt-1">
-                     <div class="col-12 col-md-6 col-lg-4 g-3">
-                         <div class="rounded-3">
+                 <div class="row gy-2 mt-1 hover-card-container">
+                     <div class="col-12 col-md-6 col-lg-4 g-3 not-hover-card">
+                         <div class="rounded-3 hover-card">
                              <img src="./img/cabin.png" class="w-100 object-fit-cover rounded-3" alt="cabin">
                          </div>
                      </div>
-                     <div class="col-12 col-md-6 col-lg-4 g-3">
-                         <div class="rounded-3">
+                     <div class="col-12 col-md-6 col-lg-4 g-3 not-hover-card">
+                         <div class="rounded-3 hover-card">
                              <img src="./img/cake.png" class="w-100 object-fit-cover rounded-3" alt="cake">
                          </div>
                      </div>
-                     <div class="col-12 col-md-6 col-lg-4 g-3">
-                         <div class="rounded-3">
+                     <div class="col-12 col-md-6 col-lg-4 g-3 not-hover-card">
+                         <div class="rounded-3 hover-card">
                              <img src="./img/circus.png" class="w-100 object-fit-cover rounded-3" alt="circus">
                          </div>
                      </div>
-                     <div class="col-12 col-md-6 col-lg-4 g-3">
-                         <div class="rounded-3">
+                     <div class="col-12 col-md-6 col-lg-4 g-3 not-hover-card">
+                         <div class="rounded-3 hover-card">
                              <img src="./img/game.png" class="w-100 object-fit-cover rounded-3" alt="game">
                          </div>
                      </div>
-                     <div class="col-12 col-md-6 col-lg-4 g-3">
-                         <div class="rounded-3">
+                     <div class="col-12 col-md-6 col-lg-4 g-3 not-hover-card">
+                         <div class="rounded-3 hover-card">
                              <img src="./img/safe.png" class="w-100 object-fit-cover rounded-3" alt="safe">
                          </div>
                      </div>
-                     <div class="col-12 col-md-6 col-lg-4 g-3">
-                         <div class="rounded-3">
+                     <div class="col-12 col-md-6 col-lg-4 g-3 not-hover-card">
+                         <div class="rounded-3 hover-card">
                              <img src="./img/submarine.png" class="w-100 object-fit-cover rounded-3" alt="submarine">
                          </div>
                      </div>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="row ">
                     <div class="col-12 d-flex justify-content-center">
-                        <button class="btn btn-link border border-white rounded text-white text-decoration-none"><i class="fa-solid fa-download"></i> Download</button>
+                        <button class="bg-acqua border-1 p-2 rounded-1 text-white btn btn-outline-light"><i class="fa-solid fa-download"></i> Download</button>
                     </div>
                 </div>
              </div>
@@ -187,7 +187,7 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <h5 class="text-white text-center mt-5 mt-sm-2">AROUND THE WEB</h5>
-                    <div class="text-center text-white fs-5 d-flex justify-content-center">
+                    <div class="text-center text-white fs-5 d-flex justify-content-center icons-footer-container">
                         <a href="" class="text-decoration-none text-white circle-icon-footer me-3">
                             <i class="p-3 fa-brands fa-facebook-f"></i>
                         </a>
