--- a/index.html
+++ b/index.html
@@ -178,8 +178,10 @@
         </div>
     </main>
 <!-- FOOTER -->
+
+<!-- CHIEDI COME SISTEMARE GLI SPAZI AI LATI QUANDO SI È IN LG -->
     <footer class="bg-custom-lighblue">
-        <div class="container-fluid py-5">
+        <div class="container-fluid py-5 px-md-5">
             <div class="row gy-5">
                 <div class="col-12 col-md-4 mb-3">
                     <h5 class="text-white text-center">LOCATION</h5>
@@ -203,7 +205,7 @@
                         <div class="d-flex justify-content-center align-items-center bg-primary rounded-circle"></div>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 px-md-5">
                     <h5 class="text-white text-center mt-5 mt-sm-2">ABOUT FREELANCER</h5>
                     <h5 class="text-white text-center mt-5 mt-sm-2">Freelance is a free to use, open source Bootstrap theme created by <span class="text-acqua">Start Bootstrap</span>.</h5>
                 </div>
